<resources>
	<string name="app_name">android-WaltzSDK</string>
	
	<string name="grant_camera_permission">Grant camera permission</string>
	<string name="camera_permission_granted">Camera permission granted</string>
	<string name="login">Login</string>
	<string name="logout">Logout</string>
	<string name="start_transaction">Start Transaction</string>
	<string name="user_infos">User infos</string>
	<string name="start_geofence">Start geofence</string>
	<string name="stop_geofence">Stop geofence</string>
	<string name="send_invitation">Send invitation</string>
	<string name="my_visitors">My visitors</string>
	<string name="my_invitations">My invitations</string>
</resources>
