<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		>
		
		<Button
			android:id="@+id/camera_permission"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginEnd="32dp"
			android:layout_marginStart="32dp"
			android:layout_marginTop="4dp"
			android:text="@string/grant_camera_permission"
			/>
		
		<Button
			android:id="@+id/login"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginEnd="32dp"
			android:layout_marginStart="32dp"
			android:layout_marginTop="4dp"
			android:text="@string/login"
			/>
		
		<Button
			android:id="@+id/start_transaction"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginEnd="32dp"
			android:layout_marginStart="32dp"
			android:layout_marginTop="4dp"
			android:text="@string/start_transaction"
			/>
		
		<Button
			android:id="@+id/user_infos"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginEnd="32dp"
			android:layout_marginStart="32dp"
			android:layout_marginTop="4dp"
			android:text="@string/user_infos"
			/>
		
		<TextView
			android:id="@+id/user_infos_result"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginEnd="32dp"
			android:layout_marginStart="32dp"
			android:layout_marginTop="4dp"
			android:visibility="gone"
			/>
		
		<Button
			android:id="@+id/start_geofence"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginEnd="32dp"
			android:layout_marginStart="32dp"
			android:layout_marginTop="4dp"
			android:text="@string/start_geofence"
			/>
		
		<Button
			android:id="@+id/stop_geofence"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginEnd="32dp"
			android:layout_marginStart="32dp"
			android:layout_marginTop="4dp"
			android:text="@string/stop_geofence"
			/>
		
		<Button
			android:id="@+id/send_invitation"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginEnd="32dp"
			android:layout_marginStart="32dp"
			android:layout_marginTop="4dp"
			android:text="@string/send_invitation"
			/>
		
		<Button
			android:id="@+id/my_guests"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginEnd="32dp"
			android:layout_marginStart="32dp"
			android:layout_marginTop="4dp"
			android:text="@string/my_visitors"
			/>
		
		<Button
			android:id="@+id/my_invitations"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginEnd="32dp"
			android:layout_marginStart="32dp"
			android:layout_marginTop="4dp"
			android:text="@string/my_invitations"
			/>
		
		<TextView
			android:id="@+id/invitations_result"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginEnd="32dp"
			android:layout_marginStart="32dp"
			android:layout_marginTop="4dp"
			android:visibility="gone"
			/>
		
		<Button
			android:id="@+id/logout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginEnd="32dp"
			android:layout_marginStart="32dp"
			android:layout_marginTop="4dp"
			android:text="@string/logout"
			/>
	
	</LinearLayout>

</ScrollView>

